Closed
Bug 188557
Opened 23 years ago
Closed 21 years ago
Hard-coded application name "Navigator" in "Illegal plugin operation" error message
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: matthew, Assigned: vhaarr+bmo)
References
()
Details
Attachments
(2 files, 4 obsolete files)
5.78 KB,
patch
|
vhaarr+bmo
:
review+
vhaarr+bmo
:
superreview+
|
Details | Diff | Splinter Review |
847 bytes,
patch
|
kairo
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.3b) Gecko/20030110
Build Identifier: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.3b) Gecko/20030110
When going to the specified URL, I get an error message "The plugin performed an
illegal operation. You are strongly advised to restart Navigator." I don't mind
getting an error - the page contains SVG and I don't think I do have an
up-to-date plugin - but the application name "Navigator" seems to be hard-coded.
Reproducible: Always
Steps to Reproduce:
1. Load the above URL without a suitable SVG plugin.
Actual Results:
See an error "The plugin performed an illegal operation. You are strongly
advised to restart Navigator."
Expected Results:
Should see "... You are strongly advised to restart Phoenix", if using Phoenix.
I don't know whether Mozilla should say "Navigator" or "Mozilla".
seems to be BadPluginMessage in
xpfe/components/xfer/resources/locale/en-US/downloadProgress.properties
![]() |
||
Comment 2•21 years ago
|
||
Just noticed this too in Firefox 1.0PR
Mozilla/5.0 (Windows; U; Windows NT 5.0; rv:1.7.3) Gecko/20040913 Firefox/0.10
And in this case, "plugins" aren't even called "plug-ins" anymore, but
"extensions". Would be best if this string wouldn't be hardcoded both to use the
proper product name and the term used in the product.
jonas.nordlund@gmail.com: a plug-in is a plug-in. it always has been, it always
will be. not to be confused with extensions.
![]() |
||
Comment 4•21 years ago
|
||
Sorry, my bad, got confused :-)
Anyway, there's yet another reason to fix this since the Firefox Help won't find
any information about "plugins" or where to get them. It will, however, if you
search for "plug-ins".
Comment 5•21 years ago
|
||
*** Bug 259171 has been marked as a duplicate of this bug. ***
Comment 6•21 years ago
|
||
*** Bug 273501 has been marked as a duplicate of this bug. ***
Comment 7•21 years ago
|
||
*** Bug 273582 has been marked as a duplicate of this bug. ***
![]() |
Assignee | |
Comment 8•21 years ago
|
||
Neil: Could you advise on the following?
I guess we need to use the StringBundleOverride stuff here, but I'm not sure.
What I think is: when the StringBundle is initialized in <>, we need to add an
mOverrideBundle, which probably should be this one:
nsCOMPtr<nsIStringBundle> bundle;
bundleService->CreateBundle("chrome://global/locale/brand.properties",
getter_AddRefs(bundle));
And then add that as an argument when creating the StringBundle for
downloadProgress.properties.
The patch for the properties file would be as simple as this:
- BadPluginMessage=The plugin performed an illegal operation. You are strongly
advised to restart Navigator.
+ BadPluginMessage=The plugin performed an illegal operation. You are strongly
advised to restart %S.
Or am I completely wrong - does nsIPersistentProperties have anything to do with
this ?
![]() |
Assignee | |
Comment 9•21 years ago
|
||
Right, the '<>' was supposed to be filled with:
<http://lxr.mozilla.org/seamonkey/source/modules/plugin/base/src/nsPluginHostImpl.cpp#6082>
![]() |
Assignee | |
Comment 10•21 years ago
|
||
I was wrong in my last comment(s), as pointed to by bsmedberg and biesi on IRC.
Thankfully, they helped me along to the correct way.
These are the C changes. properties changes coming up.
Attachment #168657 -
Flags: review?(peterlubczynski-bugs)
![]() |
Assignee | |
Comment 11•21 years ago
|
||
Uses %S instead of 'Navigator'.
Attachment #168658 -
Flags: review?(peterlubczynski-bugs)
![]() |
Assignee | |
Comment 12•21 years ago
|
||
This includes all the three files in one attachment (sorry about the spam!). It
also includes the second (!) downloadProgress.properties (one for suite and one
for other apps).
The file should probably be moved, as biesi pointed out on IRC, but that's for
Peter to decide, I guess. It's also terribly confusingly named :)
Assignee: peterlubczynski-bugs → bugmail
Attachment #168657 -
Attachment is obsolete: true
Attachment #168658 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #168661 -
Flags: review?(peterlubczynski-bugs)
![]() |
Assignee | |
Updated•21 years ago
|
Attachment #168657 -
Flags: review?(peterlubczynski-bugs)
![]() |
Assignee | |
Updated•21 years ago
|
Attachment #168658 -
Flags: review?(peterlubczynski-bugs)
Comment 13•21 years ago
|
||
Comment on attachment 168661 [details] [diff] [review]
includes the two above patches, and the second properties file
r+sr=jst
Attachment #168661 -
Flags: superreview+
Attachment #168661 -
Flags: review?(peterlubczynski-bugs)
Attachment #168661 -
Flags: review+
![]() |
Assignee | |
Comment 14•21 years ago
|
||
jst: As discussed on IRC, could you check this in when you get a chance?
![]() |
Assignee | |
Comment 15•21 years ago
|
||
timeless suggested that we only use one bundle variable, so here's my try on
that approach
![]() |
Assignee | |
Comment 16•21 years ago
|
||
Comment on attachment 168997 [details] [diff] [review]
alternate approach
jst: timeless thinks this is a better approach - could you take a look?
Feel free to land the patch of your choice.
Attachment #168997 -
Flags: review?(jst)
![]() |
Assignee | |
Comment 17•21 years ago
|
||
*** Bug 277110 has been marked as a duplicate of this bug. ***
Comment 18•21 years ago
|
||
Comment on attachment 168997 [details] [diff] [review]
alternate approach
I'm fine with either patch here... r=jst
Attachment #168997 -
Flags: review?(jst) → review+
![]() |
||
Comment 19•21 years ago
|
||
Re: additional comment #1, shouldn't this text have "plugin" changed to
"plug-in" with a hyphen?
+BadPluginMessage=The plugin performed an illegal operation. You are strongly
advised to restart %S.
Comment 20•21 years ago
|
||
yes. "plugin" should be "plug-in"
![]() |
Assignee | |
Comment 21•21 years ago
|
||
I'll update the patch. I think we'll go for the alternate approach in attachment
168997 [review], because it's smaller.
We'll wait till after 1.8a6 before landing it, though, as this isn't really
critical for an alpha anyway.
![]() |
Assignee | |
Comment 22•21 years ago
|
||
New patch to that effect (derived from attachment 168997 [details] [diff] [review]).
Carrying forward r+sr=jst.
![]() |
Assignee | |
Updated•21 years ago
|
Attachment #168661 -
Attachment is obsolete: true
Attachment #168997 -
Attachment is obsolete: true
Attachment #170485 -
Flags: superreview+
Attachment #170485 -
Flags: review+
Comment 23•21 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 24•21 years ago
|
||
*** Bug 176542 has been marked as a duplicate of this bug. ***
Comment 25•21 years ago
|
||
*** Bug 279534 has been marked as a duplicate of this bug. ***
![]() |
Assignee | |
Comment 26•21 years ago
|
||
One-liner fix for the chrome URL to brand.properties
![]() |
||
Comment 27•21 years ago
|
||
Comment on attachment 172802 [details] [diff] [review]
fix for legal chrome URL
r=me, as it concerns locale things and it's simple ;-)
Attachment #172802 -
Flags: review+
Comment 28•21 years ago
|
||
Comment on attachment 172802 [details] [diff] [review]
fix for legal chrome URL
I'm picking jst here because he has reviewed some earlier patches.
jst, this is a 1 line change to make the original fix actually work.
Attachment #172802 -
Flags: superreview?(jst)
![]() |
||
Updated•21 years ago
|
Attachment #172802 -
Flags: superreview?(jst) → superreview+
![]() |
Assignee | |
Comment 29•21 years ago
|
||
Attachment 172802 [details] [diff] was checked in by James - thanks!
Can anyone verify the fix?
Comment 30•21 years ago
|
||
*** Bug 290104 has been marked as a duplicate of this bug. ***
![]() |
||
Comment 31•20 years ago
|
||
Another instance of this bug or a dupe? bug 300296
Comment 32•20 years ago
|
||
*** Bug 300296 has been marked as a duplicate of this bug. ***
Comment 33•20 years ago
|
||
*** Bug 305889 has been marked as a duplicate of this bug. ***
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•