Bug 188557 Application name should not be hard-coded in "Illegal plug-in operation" dialog p=bugmail@q1n.org r+sr=jst